...
        AppShortcut(
            intent: GetRecordsIntent(),
            phrases: [
                "Show records in \(.applicationName)",
                "Get weightlifting records in \(.applicationName)"
            ],
            shortTitle: "Records",
            systemImageName: "medal.fill"
        )

        AppShortcut(
            intent: OpenCompDataIntent(),
            phrases: [
...
